--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
         "tailwindcss": "^3.0.0",
         "vue": "^3.2.31",
         "vue-loader": "^17.0.0"
+    },
+    "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^34.2.0",
+        "@ckeditor/ckeditor5-vue": "^4.0.1"
     }
 }
