--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^34.2.0",
-        "@ckeditor/ckeditor5-vue": "^4.0.1"
+        "@ckeditor/ckeditor5-vue": "^4.0.1",
+        "vue-multiselect": "^2.1.7"
     }
 }
